@@ -2,6 +2,7 @@ v1.5.1 (WIP)
 - Store TextView buffer as [][]byte instead of []string
 - Add TextView.SetBytes and TextView.GetBytes
 - Add TableCell.SetBytes, TableCell.GetBytes and TableCell.GetText
+- Fix List.Transform not calling handler set via SetChangedFunc
 - Allow modification of scroll bar render text
 - Optimize TextView (writing is 90% faster, drawing is 50% faster)
 - Remove return values from methods which return their primitive (breaks chaining)
